--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html -d ."
+    "build": "parcel build src/index.html -d . --public-url /weld-assignment/"
   },
   "keywords": [],
   "author": "",
